# Splitwise-

./: ARCHITECTURE.md  CMakeLists.txt  README.md
.github/workflows/: cpp.yml
include/: balance_sheet.hpp  expense.hpp  group.hpp  split_strategy.hpp  split_strategy_factory.hpp  splitwise_manager.hpp  user.hpp
src/: balance_sheet.cpp  expense.cpp  group.cpp  main.cpp  split_strategy.cpp  split_strategy_factory.cpp  splitwise_manager.cpp  user.cpp
tests/: reconciliation_tests.cpp  strategy_tests.cpp
